# t2

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: correct_distributions.json  counter_default.yaml  incorrect_distributions.json  inventory_node_config.yaml  sap_event_config.yaml
core/: detector_yolo.py
core/counter/: __init__.py  containment.py  costs.py  counting.py  depth_features.py  depth_topdown.py  dinov3_model.py  distribution_wrapper.py  embedder.py  feature_extractor.py  filters.py  kf_loader.py  reporter.py  tracker.py  types.py  visualize.py  workarea_mask.py
core/photographer/: __init__.py  area.py  config.py  context.py  photographer.py  render.py  routing.py  types.py  utils.py  writer.py
core/photographer/keyframes/: __init__.py  area_empty.py  area_set.py  base.py  capture_all.py  occlusion.py  person_near.py  product_in_hand.py  stable_area.py  stable_reconfirm.py
core/visualizer/: __init__.py  detection.py  display_overlay.py  label_renderer.py  wrapper.py
docs/: GUIA_USO_ROS2.md
launch/: pallet_vision.launch.py  pallet_vision_sim.launch.py
lib/counter_bridge/: __init__.py  counter_bridge.py
lib/debug_writer/: __init__.py  debug_writer.py
lib/inventory/: __init__.py  camera_runtime.py  counter_adapter.py  debug_storage.py  detector_manager.py  event_manager.py  photographer_adapter.py
models/: README.md  hf_2_tensorrt.py  yolo_cardboard_to_trt.py
msg/: CountResult.msg  Detection.msg  DetectionArray.msg  HandlingUnit.msg  Item.msg  PickerEvent.msg  PickerPlan.msg
nodes/: inventory_node.py  sap_event_node.py
resource/: pallet_vision
scripts/: inventory_node  sap_event_node
tests/: test_boundary_keyframes.py  test_counter_adapter.py  test_event_manager.py  test_integration_signal_cycle.py
