<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pallet_vision</name>
  <version>0.1.0</version>
  <description>Pallet Vision: inventory counting with integrated detector, photographer and counter.</description>
  <maintainer email="vision@cencosud.com">Pallet Vision Team</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
